--- a/plist/ZiniTevi.plist
+++ b/plist/ZiniTevi.plist
@@ -17,13 +17,13 @@
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://icons.appinstallerios.com/AppInstalleriOSIcon.png</string>
+					<string>https://appinstallerios.com/private/Files/Icons/ZiniTeviIcon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://icons.appinstallerios.com/AppInstalleriOSIcon.png</string>
+					<string>https://appinstallerios.com/private/Files/Icons/ZiniTeviIcon.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
