--- a/AppInstalleriOS.json
+++ b/AppInstalleriOS.json
@@ -4,7 +4,7 @@
     "unc0ver": {
       "Icon": "https://icons.appinstallerios.com/Unc0verIcon.png",
       "Name": "unc0ver",
-      "IPA": "https://appinstallerios.com/private/IPA/unc0ver.ipa",
+      "IPA": "https://unc0ver.dev/downloads/8.0.2/9e44edfbfd1905cadf23c3b9ad1d5bed683ce061/unc0ver_Release_8.0.2.ipa",
       "Banner": "https://appinstallerios.com/Img/unc0verBanner.png",
       "Developer": "pwn20wnd"
     },
