--- a/AppInstalleriOS.json
+++ b/AppInstalleriOS.json
@@ -16,9 +16,9 @@
       "Developer": "ZiniTevi Team"
     },
     "MediaBox HD": {
-      "Icon": "https://icons.appinstallerios.com/MediaBoxIcon.png",
+      "Icon": "https://appinstallerios.com/private/Files/Icons/MediaBoxIcon.png",
       "Name": "MediaBox HD",
-      "IPA": "https://appinstallerios.com/private/IPA/MediaBox.ipa",
+      "IPA": "https://mediaboxhd.net/download/mediaboxhd_2.ipa",
       "Banner": "https://appinstallerios.com/Img/MediaBoxBanner.png",
       "Developer": "AppInstaller iOS"
     },
