--- a/AppInstalleriOS.json
+++ b/AppInstalleriOS.json
@@ -30,9 +30,9 @@
       "Developer": "CoolStar"
     },
     "Scarlet": {
-      "Icon": "https://icons.appinstallerios.com/ScarletIcon.png",
+      "Icon": "https://appinstallerios.com/private/Files/Icons/ScarletIcon.png",
       "Name": "Scarlet",
-      "IPA": "https://appinstallerios.com/private/IPA/Scarlet.ipa",
+      "IPA": "https://resources.usescarlet.com/IPAs/ScarletAlpha.ipa",
       "Banner": "https://appinstallerios.com/Img/ScarletBanner.png",
       "Developer": "DebianArch"
     },
