--- a/AppInstalleriOS.json
+++ b/AppInstalleriOS.json
@@ -5,42 +5,42 @@
       "Icon": "https://appinstallerios.com/private/Files/Icons/Unc0verIcon.png",
       "Name": "unc0ver",
       "IPA": "https://unc0ver.dev/downloads/8.0.2/9e44edfbfd1905cadf23c3b9ad1d5bed683ce061/unc0ver_Release_8.0.2.ipa",
-      "Banner": "https://appinstallerios.com/Img/unc0verBanner.png",
+      "Banner": "https://appinstallerios.com/private/Files/Banners/unc0verBanner.png",
       "Developer": "pwn20wnd"
     },
     "ZiniTevi": {
       "Icon": "https://appinstallerios.com/private/Files/Icons/ZiniTeviIcon.png",
       "Name": "ZiniTevi",
       "IPA": "https://zinitevi.github.io/movieapps/apps/zinitevi_adhoc.ipa",
-      "Banner": "https://appinstallerios.com/Img/ZiniTeviBanner.png",
+      "Banner": "https://appinstallerios.com/private/Files/Banners/ZiniTeviBanner.png",
       "Developer": "ZiniTevi Team"
     },
     "MediaBox HD": {
       "Icon": "https://appinstallerios.com/private/Files/Icons/MediaBoxIcon.png",
       "Name": "MediaBox HD",
       "IPA": "https://mediaboxhd.net/download/mediaboxhd_2.ipa",
-      "Banner": "https://appinstallerios.com/Img/MediaBoxBanner.png",
+      "Banner": "https://appinstallerios.com/private/Files/Banners/MediaBoxBanner.png",
       "Developer": "MediaBox Team"
     },
     "Odyssey": {
       "Icon": "https://appinstallerios.com/private/Files/Icons/OdysseyIcon.png",
       "Name": "Odyssey",
       "IPA": "https://github.com/Odyssey-Team/Odyssey/releases/download/v1.4.2/Odyssey-1.4.2.ipa",
-      "Banner": "https://appinstallerios.com/Img/OdysseyBanner.png",
+      "Banner": "https://appinstallerios.com/private/Files/Banners/OdysseyBanner.png",
       "Developer": "CoolStar"
     },
     "Scarlet": {
       "Icon": "https://appinstallerios.com/private/Files/Icons/ScarletIcon.png",
       "Name": "Scarlet",
       "IPA": "https://resources.usescarlet.com/IPAs/ScarletAlpha.ipa",
-      "Banner": "https://appinstallerios.com/Img/ScarletBanner.png",
+      "Banner": "https://appinstallerios.com/private/Files/Banners/ScarletBanner.png",
       "Developer": "DebianArch"
     },
     "Taurine": {
       "Icon": "https://appinstallerios.com/private/Files/Icons/TaurineIcon.png",
       "Name": "Taurine",
       "IPA": "https://github.com/Odyssey-Team/Taurine/releases/download/1.1.2/Taurine-1.1.2.ipa",
-      "Banner": "https://appinstallerios.com/Img/TaurineBanner.png",
+      "Banner": "https://appinstallerios.com/private/Files/Banners/TaurineBanner.png",
       "Developer": "CoolStar"
     },
     "YouTube Reborn": {
